src/app/production/blueprint-details/blueprint-details.component.scss
@import 'src/styles/variables';
@import 'src/styles/functions';

.bpoItemContainer {
    display: flex;
    align-content: center;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 10px;

    .arrow {
        padding-left: 20px;
        padding-right: 20px;
    }

    .itemInfo {
        display: flex;
        flex-wrap: nowrap;
        overflow: hidden;

        @include breakpoint(490px) {
            max-width: 300px;
            }
        @include breakpoint(410px) {
            max-width: 250px;
            }

        .itemDetails {
            margin: 5px;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
            text-align: left;
            
            .itemInfoName{
                white-space: nowrap;
                overflow: hidden;
                text-overflow: ellipsis;
                cursor: pointer;
            }
        
            .itemInfoId {
                font-size: 70%;
                font-style: italic;
                color: $foreground-soft2;
            }
        }
    } 
}

.bpoDetailsContainer {
    display: flex;
    flex-direction: column;
    align-content: space-around;
    justify-content: center;
    align-items: center;
    padding-top: 10px;
    padding-bottom: 10px;
    font-size: 80%;
}

.calcSummaryEntry {
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    align-items: center;
    flex-wrap: nowrap;
    align-content: center;

    .titleLabel{
        width: 120px;
        padding-right: 10px;
        overflow: hidden;
        text-align: left;
        display: inline-block;
        white-space: nowrap;
        text-overflow: ellipsis;
    }

    .valueLabel{
        overflow: hidden;
        text-align: right;
        display: inline-block;
        white-space: nowrap;
        text-overflow: ellipsis;
    }

    .negativeNumber {
        color: $accent2;
    }

    .positivNumber {
        color: $accent3;
    }

    .minorInfo {
        font-size: 80%;
        color: $foreground-soft1;
    }
}
    

